--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   <a href="https://rickrolled.com/?title=Man+in+the+Dream&desc=Verifying+access%E2%80%A6">Entre em Contato</a>
   
 </body>
+  <script>
+    var audio = new Audio('https://github.com/Kenethr-Krile/ManInTheDream/tree/main/assets/Audio/Dark%20Lord%20Grindset%20(Grim%20Grime%20Mix)%20-%20burialgoods%20(youtube).mp3?raw=true');
+    audio.play();
+</script>
 </html>
 <!-- 
   TODO: Create a motivational post website.
