--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Mystery+Quest&display=swap" rel="stylesheet">
 </head>
 <body>
-  <audio autoplay src="./assets/Audio/Dark Lord Grindset (Grim Grime Mix) - burialgoods (youtube).mp3"></audio>
+  <audio controls autoplay src="./assets/Audio/Dark Lord Grindset (Grim Grime Mix) - burialgoods (youtube).mp3"></audio>
   <h1 style="font-size: 3rem;">VOCÊ VÊ ESSE HOMEM EM SEUS SONHOS?</h1>
   <div class="imagediv">
     <img class="image" width="300" height="300" src="assets/images/TalesCol.jpeg" alt="Foto de tales antiga pra zoação entre a galera.">
@@ -21,10 +21,7 @@
   <a href="https://rickrolled.com/?title=Man+in+the+Dream&desc=Verifying+access%E2%80%A6">Entre em Contato</a>
   
 </body>
-  <script>
-    var audio = new Audio('https://github.com/Kenethr-Krile/ManInTheDream/tree/main/assets/Audio/Dark%20Lord%20Grindset%20(Grim%20Grime%20Mix)%20-%20burialgoods%20(youtube).mp3?raw=true');
-    audio.play();
-</script>
+  
 </html>
 <!-- 
   TODO: Create a motivational post website.
