--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Mystery+Quest&display=swap" rel="stylesheet">
 </head>
 <body>
-  <audio controls autoplay src="./assets/Audio/AudioFile.mp3"></audio>
+  <audio controls src="./assets/Audio/AudioFile.mp3"></audio>
   <h1 style="font-size: 3rem;">VOCÊ VÊ ESSE HOMEM EM SEUS SONHOS?</h1>
   <div class="imagediv">
     <img class="image" width="300" height="300" src="assets/images/TalesCol.jpeg" alt="Foto de tales antiga pra zoação entre a galera.">
